# tournaments

./: .gitignore  Cargo.toml  README.md  log4rs.yml  rust-toolchain.toml
backend/: Cargo.toml  README.md
backend/src/: api.rs  jwt.rs  lib.rs
backend/src/api/: create_event_route.rs  dashboard.rs  dashboard_login.rs  dashboard_profile_route.rs  dashboard_route.rs  event.rs  event_route.rs  login.rs  mod.rs  platform_create_route.rs  platform_get_route.rs  platform_update_route.rs  register_event_route.rs  tournament_route.rs
backend/src/async/: http_request.rs  mod.rs  tcp_listener.rs  tcp_stream.rs
backend/src/database/: cqrs_store.rs  indexed_store.rs  indexed_store_handle.rs  kv copy.rs  kv.rs  kv_store.rs  mod.rs  store.rs
backend/src/executor/: mod.rs  net_executor.rs  net_task.rs
backend/src/futures/: mod.rs  read_line.rs  tcp_stream.rs  write_all.rs
backend/src/models/: dashboard.rs  events.rs  mod.rs  platform.rs
backend/src/store/: dashboard.rs  mod.rs  platform.rs  tournament.rs
backend/src/utils/: channel.rs  error.rs  mod.rs  responses.rs
backend/tests/: executor.rs  routes.rs
frontend/: Cargo.toml  Dioxus.toml
frontend/assets/: main.css
frontend/src/: lib.rs
frontend/src/components/: mod.rs  notifications.rs  toast.rs
frontend/src/context/: brand.rs  client.rs  mod.rs  toast.rs
frontend/src/hooks/: mod.rs  use_bracket.rs  use_dashboard_api.rs  use_dashboard_login.rs  use_event.rs  use_login copy.rs  use_login.rs  use_platform_login.rs  use_platform_name.rs  use_profile.rs  use_register_event.rs
frontend/src/pages/: bracket.rs  configure_platform.rs  create_event.rs  dashboard.rs  dashboard_login.rs  event_details.rs  event_register copy.rs  event_register.rs  get_started.rs  homepage.rs  live_scores.rs  login.rs  manage_platform.rs  mod.rs  not_found.rs  platform_admin.rs  profile copy.rs  profile.rs  signup.rs
models/: Cargo.toml
models/src/: dashboard.rs  event.rs  lib.rs  platform.rs  transaction.rs  utils.rs
models/src/dashboard/: event.rs  (+4 more)
(+10 files in other folders)
