[package]
name = "backend"
version = "1.0.0"
authors = ["Ryan Bruno <ryanbruno506@gmail.com>"]
edition = "2021"

[dependencies]
models = { path = "../models" }
rkyv = { version = "0.8.10", features = ["bytecheck", "alloc"] }
rkyv_derive = "0.8.10"
memmap2 = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
http = "1.0"
log4rs = "1.3.0"
log = "0.4"
polling = "3.7.4"
jsonwebtoken = "9"

[dev-dependencies]
tempfile = "3"