[package]
name = "models"
version = "1.0.0"
authors = ["Ryan Bruno <ryanbruno506@gmail.com>"]
edition = "2021"

[dependencies]
rkyv = { version = "0.8.10", features = ["bytecheck", "alloc"] }
rkyv_derive = "0.8.10"
serde = { version = "1.0", features = ["derive"] }
argon2 = "0.5"
rand_core = { version = "0.6", features = ["getrandom"] }
